- Changed the standard math functions used in the LowLevelAPI class
- Removed ckTex::editImage and ckFont::editImage
- Added ckTex::beginEditImage and ckTex::endEditImage
- Added ckFont::beginEditImage and ckFont::endEditImage
- Renamed ckUtil::import3DS to ckUtil::import3DSModel
- Renamed ckUtil::import3DSAs to ckUtil::import3DSModelAs
- Modified the default shader code to get better performance


Changes in 0.9.0 (released on December 29, 2009)
----------------------------------------------------------------

- Renamed ckRend_Shader::setUniformCol3x255 to setUniformCol3
- Renamed ckRend_Shader::setUniformCol4x255 to setUniformCol4
- Renamed ckRend_Shader::setAttribCol3x255 to setAttribCol3
- Renamed ckRend_Shader::setAttribCol4x255 to setAttribCol4
- Modified ckTaskMgr::deleteTaskForSystem
- Completed the API reference.
- Added support for Android (contributed by Daisuke Nakata)
- Modified ckDrawMgr::calcFontDrawWidth and ckFont::drawString for Android
- Changed ckDraw::setBlendMode
- Removed ckDraw::setPreset_defaultBlendOff
- Removed ckDraw::setPreset_defaultBlendHalf
- Removed ckDraw::setPreset_defaultBlendAdd
- Modified ckID::genID and ckID_ macro
- Fixed ckUtil::import3DS


Changes in 0.8.5 (released on November 11, 2009)
----------------------------------------------------------------

- Renamed the name of the module to Catcake
- Renamed the prefix from 'pg' to 'ck'
- Renamed getLastDesc to getLastDescendant
- Removed PyPogolyn
- Modified ckID::genID and ckID_ macro
- Suspended support for iPhone
- Modified the sample #10 to hide the mouse cursor
- Stopped support for MinGW
- Upgraded libpng to version 1.2.40
- Upgraded FreeType to version 2.3.11


Changes in 0.8.0 (released on August 15, 2009)
----------------------------------------------------------------

- Fixed PG_NO_THROW_EXCEPTION build option
- Renamed all the methods along the new coding-rule
- Added pgMotData, the motion data class
- Added pgMot, the motion-playing class