@@ -29,5 +29,5 @@ cp lib/*.a ../../lib
 
 make -C ../../../.. APP=catcake clean all
 
-cp ../../../../out/apps/catcake/libcatcake.a ../../lib
+cp ../../../../out/apps/catcake/armeabi/libcatcake.a ../../lib
 rm ../../Application.mk
